--- a/style.css
+++ b/style.css
@@ -1,21 +1,40 @@
 /* Basic Style */
+ul {
+    margin: 0;
+    padding: 0px;
+}
+
+li,
+h3 {
+    list-style: none;
+}
+
+input,
+button{
+    outline: none;
+}
+
 body {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
 }
+
 .header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
+
 .header__img {
     width: 100%;
 }
+
 .header__link-more-info {
     font-family: fantasy, cursive;
 }
+
 @media (max-width:768px) {
 
     .header { 
@@ -23,31 +42,23 @@ body {
     }
 
 }
-.centered-main-page-element {
+
+.todo-list {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
+
 .task {
     width: 56%;
     display: inline-block;
     flex-grow: 1;
 }
+
 .task-row-wrapper {
     display: flex;
 }
-ul {
-    margin: 0;
-    padding: 0px;
-}
-li,
-h3 {
-    list-style: none;
-}
-input,
-button{
-    outline: none;
-}
+
 button {
     background: none;
     border: 0px;
@@ -57,12 +68,12 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
+
 button:hover {
     color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for='new-task'] {
+.todo-list__title {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -71,6 +82,7 @@ label[for='new-task'] {
     margin: 0;
     text-transform: uppercase;
 }
+
 input[type="text"] {
     margin: 0;
     font-size: 18px;
@@ -83,15 +95,17 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
+
 input[type="text"]:focus {
     color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.todo-list__title_add {
     display: block;
     margin: 0 0 20px;
 }
+
 input#new-task {
     width: 318px;
 }
@@ -105,6 +119,7 @@ li {
     justify-content: space-between;
     align-items: center;
 }
+
 li > * {
     vertical-align: middle;
 }
@@ -112,20 +127,24 @@ li > * {
 li > input[type="checkbox"] {
     margin: 0 10px;
 }
+
 li > label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
+
 li >    input[type="text"] {
     width: 226px;
 }
+
 button.delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
+
 button.delete img:hover {
     transform: rotateZ(0);
 }
