--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ body {
 }
 
 .add-item__input,
-input[type="text"] {
+.li__input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -114,7 +114,7 @@ input[type="text"] {
     color: #888;
 }
 .add-item__input:focus,
-input[type="text"]:focus {
+.li__input:focus {
     color: #333;
 }
 
@@ -138,51 +138,52 @@ input[type="text"]:focus {
     align-items: center;
 }
 
-li > * {
+.li > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.li__checkbox {
     margin: 0 10px;
 }
 
-li > label {
+.li__label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
 
-li >    input[type="text"] {
+.li__input {
     width: 226px;
 }
 
-.li__button-delete img {
+.li__button-delete .li__image-delete {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
 
-.li__button-delete img:hover {
+.li__button-delete .li__image-delete:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.complete-tasks .li__label {
     text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+
+.li__input {
     display: none;
 }
 
-ul li.editMode input[type=text] {
+.editMode .li__input {
     display: inline-block;
     width: 224px;
 }
 
-ul li.editMode label {
+.editMode .li__label {
     display: none;
 }
